deployment/backend/backendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: registrypullsecret
      containers:
        - name: backend
          image: bryce21/digital-nomad-site:digital-nomad-site-backend-latest
          command: ["npm", "run", "start"]
          ports:
            - containerPort: 4000
