deployment/backend/backendIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.traveler.com # This is the public host for your backend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service # Name of your backend service in Kubernetes
                port:
                  number: 4000
